03域02深审: 回填大纲漂移(线程公式在abstract_vm_version、RAMFraction废弃→RAMPercentage、Flag_writelock不存在、28个无依据)